fix contrast

--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -7,7 +7,7 @@ button {
   font-family: inherit;
   cursor: pointer;
   transition: border-color 0.25s;
-  background-color: #1677ff;
+  background-color: #0066f6;
   box-shadow: 0 2px 0 rgb(5 145 255 / 10%);
   color: #fff;
 
